page navigation code refactor

--- a/pug/pages/_animations.pug
+++ b/pug/pages/_animations.pug
@@ -553,19 +553,19 @@ main.main-content.css-tutorial
     section.aside-bar
         ul.theme-list
             li.theme-item
-                a(href='#animation-name') animation-name
+                a.smoothLink(href='#animation-name') animation-name
             li.theme-item
-                a(href='#animation-duration') animation-duration
+                a.smoothLink(href='#animation-duration') animation-duration
             li.theme-item
-                a(href='#animation-timing') animation-timing
+                a.smoothLink(href='#animation-timing') animation-timing
             li.theme-item
-                a(href='#animation-delay') animation-delay
+                a.smoothLink(href='#animation-delay') animation-delay
             li.theme-item
-                a(href='#animation-count') animation-count
+                a.smoothLink(href='#animation-count') animation-count
             li.theme-item
-                a(href='#animation-direction') animation-direction
+                a.smoothLink(href='#animation-direction') animation-direction
             li.theme-item
-                a(href='#3danimations') 3d-animation
+                a.smoothLink(href='#3danimations') 3d-animation
 
         .slide-btn
             span.fa.fa-arrow-left
