--- a/pug/pages/_flexbox.pug
+++ b/pug/pages/_flexbox.pug
@@ -535,29 +535,29 @@ main.main-content.css-tutorial
     section.aside-bar
         ul.theme-list
             li.theme-item
-                a(href='#idea-of_flexbox') Ідея flexbox
+                a.smoothLink(href='#idea-of_flexbox') Ідея flexbox
             li.theme-item
-                a(href='#justify-content') justify-content
+                a.smoothLink(href='#justify-content') justify-content
             li.theme-item
-                a(href='#align-items') align-items
+                a.smoothLink(href='#align-items') align-items
             li.theme-item
-                a(href='#flex-direction') flex-direction
+                a.smoothLink(href='#flex-direction') flex-direction
             li.theme-item
-                a(href='#flex-wrapping') flex-wrap
+                a.smoothLink(href='#flex-wrapping') flex-wrap
             li.theme-item
-                a(href='#flex-flow') flex-flow
+                a.smoothLink(href='#flex-flow') flex-flow
             li.theme-item
-                a(href='#align-content') align-content
+                a.smoothLink(href='#align-content') align-content
             li.theme-item
-                a(href='#ordering') order
+                a.smoothLink(href='#ordering') order
             li.theme-item
-                a(href='#flex-basis') flex-basis
+                a.smoothLink(href='#flex-basis') flex-basis
             li.theme-item
-                a(href='#flex-grow') flex-grow
+                a.smoothLink(href='#flex-grow') flex-grow
             li.theme-item
-                a(href='#flex-shrink ') flex-shrink
+                a.smoothLink(href='#flex-shrink ') flex-shrink
             li.theme-item
-                a(href='#flex') flex
+                a.smoothLink(href='#flex') flex
 
         .slide-btn
             span.fa.fa-arrow-left
