--- a/pug/pages/_media.pug
+++ b/pug/pages/_media.pug
@@ -145,11 +145,11 @@ main.main-content.css-tutorial
     section.aside-bar
         ul.theme-list
             li.theme-item
-                a(href='#operators') Оператори
+                a.smoothLink(href='#operators') Оператори
             li.theme-item
-                a(href='#device-types') Типи пристроїв
+                a.smoothLink(href='#device-types') Типи пристроїв
             li.theme-item
-                a(href='#device-options') Характеристіки прістроїв
+                a.smoothLink(href='#device-options') Характеристіки прістроїв
 
         .slide-btn
             span.fa.fa-arrow-left
