--- a/pug/pages/_position.pug
+++ b/pug/pages/_position.pug
@@ -231,21 +231,21 @@ main.main-content.css-tutorial
     section.aside-bar
         ul.theme-list
             li.theme-item
-                a(href='#static') static
+                a.smoothLink(href='#static') static
             li.theme-item
-                a(href='#relative') relative
+                a.smoothLink(href='#relative') relative
             li.theme-item
-                a(href='#fixed') fixed
+                a.smoothLink(href='#fixed') fixed
             li.theme-item
-                a(href='#absolute') absolute
+                a.smoothLink(href='#absolute') absolute
             li.theme-item
-                a(href='#alignment') Горізонтальне/Вертикальне вірівнювання
+                a.smoothLink(href='#alignment') Горізонтальне/Вертикальне вірівнювання
             li.theme-item
-                a(href='#vertical-alignment') Вертикальне виривнювання
+                a.smoothLink(href='#vertical-alignment') Вертикальне виривнювання
             li.theme-item
-                a(href='#text-alignment') Виривнювання тексту
+                a.smoothLink(href='#text-alignment') Виривнювання тексту
             li.theme-item
-                a(href='#float') float
+                a.smoothLink(href='#float') float
 
         .slide-btn
             span.fa.fa-arrow-left
