--- a/pug/pages/_selectors.pug
+++ b/pug/pages/_selectors.pug
@@ -403,13 +403,13 @@ main.main-content.css-tutorial
         section.aside-bar
             ul.theme-list
                 li.theme-item
-                    a(href='#attr-selectors') Селектори по атрибуту
+                    a.smoothLink(href='#attr-selectors') Селектори по атрибуту
                 li.theme-item
-                    a(href='#pseudo-classes') Псевдо-класи
+                    a.smoothLink(href='#pseudo-classes') Псевдо-класи
                 li.theme-item
-                    a(href='#cascade') Каскаднисть
+                    a.smoothLink(href='#cascade') Каскаднисть
                 li.theme-item
-                    a(href='#pseudo-elements') Псевдо-елементи
+                    a.smoothLink(href='#pseudo-elements') Псевдо-елементи
 
             .slide-btn
                 span.fa.fa-arrow-left
