--- a/pug/pages/_transform.pug
+++ b/pug/pages/_transform.pug
@@ -163,11 +163,9 @@ main.main-content.css-tutorial
     section.aside-bar
         ul.theme-list
             li.theme-item
-                a(href='#transform-origin') transform-origin
+                a.smoothLink(href='#transform-origin') transform-origin
             li.theme-item
-                a(href='#transition') transition
-
-
+                a.smoothLink(href='#transition') transition
         .slide-btn
             span.fa.fa-arrow-left
 
