--- a/scss/modules/_block-styling.scss
+++ b/scss/modules/_block-styling.scss
@@ -32,18 +32,18 @@
 }
 
 #brepet {
-  background-image: url("../img/s1.png");
+  background-image: url("./img/s1.png");
   width: 250px;
 }
 
 #bsize {
-  background-image: url("../img/s1.png");
+  background-image: url("./img/s1.png");
   background-repeat: no-repeat;
   width: 250px;
 }
 
 #battach {
-  background: #00a19b url("../img/b.png") no-repeat;
+  background: #00a19b url("./img/b.png") no-repeat;
   color: red;
   overflow: auto;
   background-size: cover;
@@ -56,20 +56,20 @@
 
 #bclip {
   padding: 20px;
-  background: url("../img/b2.png") no-repeat;
+  background: url("./img/b2.png") no-repeat;
   font-size: 13px;
   border: 10px solid rgba(0, 0, 0, 0.5);
 }
 
 #borig {
   padding: 20px;
-  background: url("../img/b2.png") no-repeat;
+  background: url("./img/b2.png") no-repeat;
   font-size: 13px;
   border: 10px solid rgba(0, 0, 0, 0.5);
 }
 
 #opa {
-  background: url("../img/b2.png") no-repeat;
+  background: url("./img/b2.png") no-repeat;
   padding: 50px 0;
 }
 
