--- a/scss/utilities/_color.scss
+++ b/scss/utilities/_color.scss
@@ -2,7 +2,7 @@
 
 // General ---------------
 $title-color: #4d4d52;
-$box-shadow-black: 3px 8px 29px -6px rgba($black, 0.5);
+
 $base-text: #696969;
 $menu-color: darken(#F9FAFB, 1);
 
@@ -13,6 +13,9 @@ $orange-1: #FF6421;
 $blue-1: #009BD9;
 $box-color-1: rgba(#D8D8D8, .9);
 $grey-1: lighten(#696969, .5);
+
+$box-shadow-black: 3px 8px 29px -6px rgba($black, 0.5);
+$box-shadow-orange: 5px 2px 15px 0 rgba($orange-1, 0.5);
 
 // -----------------------
 
