--- a/scss/layout/_code-example.scss
+++ b/scss/layout/_code-example.scss
@@ -14,6 +14,7 @@ figure.code {
   box-shadow: $box-shadow-black;
   transition: box-shadow 200ms ease-in-out;
   cursor: pointer;
+  outline: none;
 
   &::before {
     content: "css";
