--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -1,3 +1,9 @@
+.scroll-wrap {
+  margin-top: 2rem;
+  height: 80vh;
+}
+
+
 .nav-menu {
   position: fixed;
   top: 0;
@@ -10,7 +16,7 @@
   z-index: 1000;
 
   &:hover {
-    width: 20%;
+    width: 320px;
 
     .home-link {
 
@@ -19,7 +25,7 @@
       }
 
       &:before {
-        right: 2rem;
+        right: 0;
       }
     }
 
@@ -27,10 +33,7 @@
   }
 }
 
-.scroll-wrap {
-  margin-top: 2rem;
-  height: 70vh;
-}
+
 
 .home-link {
   position: relative;
@@ -67,15 +70,18 @@
 
 .nav-list {
   position: relative;
-  padding: 0 0 0 3rem;
+  top: 0;
+  bottom: 1rem;
+  padding: 0 0 1rem 3rem;
   display: block;
   list-style: none;
   counter-reset: item-number;
 
+
   li {
-    display: flex;
     position: relative;
     height: 2.2rem;
+    width: 270px;
     line-height: 1rem;
 
     &::before {
@@ -93,23 +99,16 @@
       text-align: center;
       line-height: 22px;
       color: $white;
-      transition: all 180ms ease;
+      transition: background-color 220ms ease-out;
     }
 
     &:hover {
       color: $black;
 
-      &::after {
-        content: "";
-        position: absolute;
-        top: 0;
-        right: 2px;
-        display: block;
-        width: 3px;
-        height: 110%;
-        background-color: $blue-1;
-        border-radius: 10%;
-        transition: all 180ms ease;
+      &::before {
+        background-color: $orange-1;
+        box-shadow: $box-shadow-orange;
+
       }
     }
   }
